# Aquarium_Monitor

./: .gitmodules  CMakeLists.txt  TopLevelDiagram.md  platformio.ini  readme.md
lib/: CMakeLists.txt
src/drivers/atm328p/custom/: CMakeLists.txt  Uart.cpp  Uart.h
src/sensor_hub/: main.cpp  main_final.cpp
